2024-10-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow saving empty value for override storage pid in Scheduler task, resolves #346
    * Allow restricted Reaction without table/index in payload (thanks to Mathias Brodala)
    * Release version 7.2.6

2024-05-23 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve compatibility with both TYPO3 11 and 12, resolves #298
    * Ensure compatibility with PHP 8.3, resolves #324
    * Release version 7.2.5

2024-03-12 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure casting to boolean when checking nullable, resolves #319
    * Switch to PHP-based documentation rendering (thanks to Lina Wolf)
    * Release version 7.2.4

2024-02-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix regression in backend module access for TYPO3 11, resolves #315
    * Release version 7.2.3

2024-02-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix handling of disabled operations properties, resolves #312
    * Release version 7.2.2

2024-02-02 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix handling of hidden child records, resolves #311
    * Release version 7.2.1

2024-01-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Log exception message and code on top of stack trace in store data step

2023-12-29 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow reading of null values in array-type data, resolves #309
    * Release version 7.2.0

2023-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve look of backend modules in TYPO3 12
    * Remove access restriction on main module, resolves #308
    * Allow skipping records in StoreDataStep, resolves #310

2023-10-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow nullable values to be stored as null, resolves #302
    * Fix error message when there is an SQL error, resolves #297 (thanks to Lina Wolf)
    * Various documentation improvements (thanks to Lina Wolf)